@@ -23,6 +23,7 @@ package uk.nhs.hee.trainee.details.service;
 
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
+import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -37,7 +38,6 @@ import static org.mockito.Mockito.when;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -324,15 +324,17 @@ class ProgrammeMembershipServiceTest {
   }
 
   @Test
-  void shouldUpdateProgrammeMembershipCojWhenPmHasUuidAndCachedCojHasUuid() {
+  void shouldUpdateProgrammeMembershipCojWhenPmHasUuidAndSavedPmHasUuid() {
     ProgrammeMembership programmeMembership = createProgrammeMembership(
         PROGRAMME_MEMBERSHIP_UUID.toString(), ORIGINAL_SUFFIX, 0);
     programmeMembership.setConditionsOfJoining(null);
-    TraineeProfile traineeProfile = new TraineeProfile();
-    traineeProfile.getProgrammeMemberships().add(programmeMembership);
 
-    when(cachingDelegate.getConditionsOfJoining(PROGRAMME_MEMBERSHIP_UUID.toString())).thenReturn(
-        Optional.of(new ConditionsOfJoining(COJ_SIGNED_AT, GoldGuideVersion.GG9)));
+    TraineeProfile traineeProfile = new TraineeProfile();
+    ProgrammeMembership savedProgrammeMembership = createProgrammeMembership(
+        PROGRAMME_MEMBERSHIP_UUID.toString(), ORIGINAL_SUFFIX, 0);
+    savedProgrammeMembership.setConditionsOfJoining(
+        new ConditionsOfJoining(COJ_SIGNED_AT, GoldGuideVersion.GG9));
+    traineeProfile.getProgrammeMemberships().add(savedProgrammeMembership);
 
     when(repository.findByTraineeTisId(TRAINEE_TIS_ID)).thenReturn(traineeProfile);
 
@@ -349,25 +351,61 @@ class ProgrammeMembershipServiceTest {
     assertThat("Unexpected signed at.", conditionsOfJoining.signedAt(), is(COJ_SIGNED_AT));
     assertThat("Unexpected signed version.", conditionsOfJoining.version(),
         is(GoldGuideVersion.GG9));
-
-    verify(cachingDelegate).getConditionsOfJoining(PROGRAMME_MEMBERSHIP_UUID.toString());
   }
 
   @Test
-  void shouldUpdateProgrammeMembershipCojWhenPmHasUuidAndCachedCojHasIds() {
+  void shouldUpdateProgrammeMembershipCojWhenPmHasUuidAndSavedPmHasDeprecatedIds() {
+    Curriculum curriculum1 = new Curriculum();
+    curriculum1.setTisId("123");
+    Curriculum curriculum2 = new Curriculum();
+    curriculum2.setTisId("456");
+    Curriculum curriculum3 = new Curriculum();
+    curriculum3.setTisId("789");
+
+    ProgrammeMembership programmeMembership = createProgrammeMembership(
+        PROGRAMME_MEMBERSHIP_UUID.toString(), ORIGINAL_SUFFIX, 0);
+    programmeMembership.setConditionsOfJoining(null);
+    programmeMembership.setCurricula(Arrays.asList(curriculum1, curriculum2, curriculum3));
+
+    ProgrammeMembership savedProgrammeMembership = createProgrammeMembership(
+        "123,456", ORIGINAL_SUFFIX, 0);
+    savedProgrammeMembership.setConditionsOfJoining(
+        new ConditionsOfJoining(COJ_SIGNED_AT, GoldGuideVersion.GG9));
+    TraineeProfile traineeProfile = new TraineeProfile();
+    traineeProfile.getProgrammeMemberships().add(savedProgrammeMembership);
+
+    when(repository.findByTraineeTisId(TRAINEE_TIS_ID)).thenReturn(traineeProfile);
+
+    Optional<ProgrammeMembership> optionalProgrammeMembership = service
+        .updateProgrammeMembershipForTrainee(TRAINEE_TIS_ID, programmeMembership);
+
+    assertThat("Unexpected optional isEmpty flag.", optionalProgrammeMembership.isEmpty(),
+        is(false));
+    ProgrammeMembership updatedProgrammeMembership = optionalProgrammeMembership.get();
+    assertThat("Unexpected conditions of joining.",
+        updatedProgrammeMembership.getConditionsOfJoining(), notNullValue());
+
+    ConditionsOfJoining conditionsOfJoining = updatedProgrammeMembership.getConditionsOfJoining();
+    assertThat("Unexpected signed at.", conditionsOfJoining.signedAt(), is(COJ_SIGNED_AT));
+    assertThat("Unexpected signed version.", conditionsOfJoining.version(),
+        is(GoldGuideVersion.GG9));
+  }
+
+  @Test
+  void shouldNotUpdateProgrammeMembershipCojWhenPmHasUuidAndSavedPmNotFound() {
     Curriculum curriculum = new Curriculum();
     curriculum.setTisId("123");
     ProgrammeMembership programmeMembership = createProgrammeMembership(
         PROGRAMME_MEMBERSHIP_UUID.toString(), ORIGINAL_SUFFIX, 0);
     programmeMembership.setConditionsOfJoining(null);
-    programmeMembership.setCurricula(new ArrayList<>(Arrays.asList(curriculum)));
-    TraineeProfile traineeProfile = new TraineeProfile();
-    traineeProfile.getProgrammeMemberships().add(programmeMembership);
+    programmeMembership.setCurricula(List.of(curriculum));
 
-    when(cachingDelegate.getConditionsOfJoining(PROGRAMME_MEMBERSHIP_UUID.toString())).thenReturn(
-        Optional.empty());
-    when(cachingDelegate.getConditionsOfJoining("123")).thenReturn(
-        Optional.of(new ConditionsOfJoining(COJ_SIGNED_AT, GoldGuideVersion.GG9)));
+    ProgrammeMembership savedProgrammeMembership = createProgrammeMembership(
+        "456,789", ORIGINAL_SUFFIX, 0);
+    savedProgrammeMembership.setConditionsOfJoining(
+        new ConditionsOfJoining(COJ_SIGNED_AT, GoldGuideVersion.GG9));
+    TraineeProfile traineeProfile = new TraineeProfile();
+    traineeProfile.getProgrammeMemberships().add(savedProgrammeMembership);
 
     when(repository.findByTraineeTisId(TRAINEE_TIS_ID)).thenReturn(traineeProfile);
 
@@ -378,15 +416,7 @@ class ProgrammeMembershipServiceTest {
         is(false));
     ProgrammeMembership updatedProgrammeMembership = optionalProgrammeMembership.get();
     assertThat("Unexpected conditions of joining.",
-        updatedProgrammeMembership.getConditionsOfJoining(), notNullValue());
-
-    ConditionsOfJoining conditionsOfJoining = updatedProgrammeMembership.getConditionsOfJoining();
-    assertThat("Unexpected signed at.", conditionsOfJoining.signedAt(), is(COJ_SIGNED_AT));
-    assertThat("Unexpected signed version.", conditionsOfJoining.version(),
-        is(GoldGuideVersion.GG9));
-
-    verify(cachingDelegate).getConditionsOfJoining(PROGRAMME_MEMBERSHIP_UUID.toString());
-    verify(cachingDelegate).getConditionsOfJoining("123");
+        updatedProgrammeMembership.getConditionsOfJoining(), nullValue());
   }
 
   @Test
